--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 2,
-    "name": "Event-AutoCategorizer",
+    "name": "AutoCategorizer",
     "version": "0.1",
     "description": "Automatic categorization for calendar entries in Thunderbird Desktop.",
     "author": "deralbert",
     "browser_specific_settings": {
         "gecko": {
-            "id": "autocategorize@example.com",
+            "id": "autocategorizer@example.com",
             "strict_min_version": "128.0"
         }
     },
